--- a/src/docs/whatsapi/Информация/Подключение мессенджеров в Личном Кабинете.md
+++ b/src/docs/whatsapi/Информация/Подключение мессенджеров в Личном Кабинете.md
@@ -4,29 +4,40 @@
 2. Введите ваши **логин** и **пароль**.
 3. Если вы забыли пароль, нажмите **«Сбросить пароль»** и следуйте инструкциям, которые придут на вашу электронную почту.
 
+![Описание картинки](/docs/image.webp)
+
 ## 2. Добавление нового аккаунта мессенджера
 
 В меню личного кабинета нажмите кнопку **«+ Добавить аккаунт»**. В появившемся окне «Настройка интеграции» выполните следующие действия:
 
-- **Выберите вид аккаунта:** Messenger
+![Описание картинки](/docs/accounts.webp)
+
+- Выберите тип мессенджера, который хотите подключить:
+  ![Описание картинки](/docs/add.webp)
+  ![Описание картинки](/docs/add_success.webp)
+
 - **Выберите мессенджер:** (например, WhatsApp или Max)
 - Нажмите кнопку **«Сохранить»**.
 
-> [!IMPORTANT]
 > **Проверьте состояние вашей подписки:**
 >
 > - Если подписка активна — продолжайте подключение.
 > - Если нет — оформите подписку через раздел **«Действие»** → **«Подписка»** → **«Оплатить»** (стоимость тарифа, например Max 1 Month, составляет **2 200 ₽/мес**).
+>   ![Описание картинки](/docs/info.webp)
+>   ![Описание картинки](/docs/tariff.webp)
 
 ## 3. Активация аккаунта
 
 1. В списке аккаунтов найдите нужный и в колонке «Действие» выберите пункт **«Включить»**.
+   ![Описание картинки](/docs/account_modal.webp)
 2. На экране появится **QR-код**. Откройте мессенджер на вашем телефоне и отсканируйте этот код.
+   ![Описание картинки](/docs/qr_code.webp)
 3. После успешного сканирования статус аккаунта изменится на **«Включен»** (зеленый индикатор).
 
 ## 4. Просмотр и управление аккаунтами
 
 В разделе **«Аккаунты»** отображается таблица со списком всех подключений.
+![Описание картинки](/docs/accountsv2.webp)
 
 ### Статусы аккаунта:
 
@@ -44,6 +55,7 @@
 
 ### Возможные действия с аккаунтом:
 
+![Описание картинки](/docs/a_modal.webp)
 Через кнопку меню в колонке «Действие» доступны следующие опции:
 
 - **Подписка** — управление оплатой и тарифом.
